unpackaged/main/default/objects/RegexExample__c/RegexExample__c.object-meta.xml
<CustomObject>
    <label>RegexExample</label>
    <nameField>
        <label>RegexExample Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RegexExamples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>