unpackaged/main/default/objects/RegexExample__c/fields/TEST_AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>TEST_AccountNumber__c</fullName>
    <label>TEST__AccountNumber</label>
    <type>AutoNumber</type>
</CustomField>