unpackaged/main/default/objects/RegexExample__c/fields/TEST_Price__c.field-meta.xml
<CustomField>
    <fullName>TEST_Price__c</fullName>
    <label>TEST__Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>