unpackaged/main/default/objects/RegexExample__c/fields/TEST_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TEST_Quantity__c</fullName>
    <label>TEST__Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>